@@ -44,6 +44,7 @@ Decode quotes in AbsenceController::edit
 Fix display and JavaScript errors on my_account page
 Correct check of admin rights in absence:edit controller
 Fix absences url in mails
+Recovery times: restore hours checking and fix error on saving
 
 *** Version 19.10.00       (2019-10-31)   ***
 - Enhancements
